tests/negative/gold/comparison-type-test.gold
tests/negative/comparison-type-test.toit:6:24: error: Return type of comparison must be a boolean
  operator == other -> string:
                       ^~~~~~
tests/negative/comparison-type-test.toit:14:24: error: Comparison operators may not return null
  operator >= other -> bool?:
                       ^~~~~
tests/negative/comparison-type-test.toit:7:5: error: Type mismatch. Expected 'bool'. Got 'string'
    return "str"
    ^~~~~~
tests/negative/comparison-type-test.toit:12:5: error: Type mismatch. Expected 'bool'. Got 'string'
    return "str"
    ^~~~~~
tests/negative/comparison-type-test.toit:25:10: error: Type mismatch. Expected 'string'. Got 'bool'
  foo (b == "foo")
         ^~
tests/negative/comparison-type-test.toit:9:3: error: Method doesn't return a value
  operator <= other:
  ^~~~~~~~~~~
Compilation failed
